Fixed issue with contact page on mobile devices

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -788,7 +788,7 @@ a:active {
 
 footer {
 		padding-top: 20px;
-		padding-bottom: 30px;
+		padding-bottom: 150px;
 		background-color: #f3f3f3;
 }
 
